--- a/src/styles.css
+++ b/src/styles.css
@@ -1,25 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
-/* You can add global styles to this file, and also import other style files */
-/* Add application styles & imports to this file! */
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
-
-
-
-
-
-
-
-
-
-
-/*@import url('../node_modules/simple-keyboard/build/css/index.css'); */
 body{
-  
-  /* background-color: rgb(244, 243, 243); */
 }
 .auth-card{
-  background: #848282;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #848282, #848282);  /* Chrome 10-25, Safari 5.1-6 */
+  background: #52575d;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #52575d, #52575d);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #848282, #848282); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   border-radius: 5px;
   box-shadow: 0px 0px 30px #f7f7f7;
